# ClaudeFusion360MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  mcp.json  pyproject.toml
.claude/: github-config.json
.github/workflows/: ci.yml
.serena/: project.yml
.vsify/discovery/: mcp-deep-audit-improvement-roadmap-2026-04-12.md
docs/: KNOWN_ISSUES.md  SKILL.md  SKILL_TEMPLATE.md  SPATIAL_AWARENESS.md  TOOL_REFERENCE.md  adr-framework-specification.md  golden-paths.md
docs/architecture/decisions/: README.md  adr-skeleton.md
docs/planning/: backlog.md
docs/planning/mcp-deep-audit-improvement-roadmap/: architecture-constraints.md  decision-rationale.md  enterprise-review.md
docs/planning/v72-operational-readiness/: architecture-constraints.md  decision-rationale.md  enterprise-review.md  optimized-requirements.md  v72-operational-readiness-2026-04-14.md
fusion-addin/: FusionMCP.manifest  FusionMCP.py
mcp-server/: errors.py  fusion360_mcp_server.py  ipc.py  validation.py
mcp-server/tools/: assembly.py  features.py  io.py  planning.py  sketch.py
scripts/: check_version_sync.py  generate_mcp_registry.py  install.py  validate_skills.py
tests/: conftest.py  test_check_version_sync.py  test_errors.py  test_fusionmcp.py  test_golden_paths.py  test_install.py  test_ipc.py  test_mcp_registry.py  test_planning.py  test_smoke.py  test_tools_assembly.py  test_tools_features.py  test_tools_io.py  test_tools_sketch.py  test_validate_filepath.py  test_validation.py  test_version_consistency.py
(+10 files in other folders)
